关系的事项清单基本完成

--- a/public/index.html
+++ b/public/index.html
@@ -331,31 +331,15 @@
             <div class="help-content">
 
                 <ul>
+                    <li><strong>用途:</strong> 梳理对象间的关系，如：组织架构、人物关系、事件关系、企业关联、族谱等。</li>
                     <li><strong>点击定增节点按钮:</strong> 新增节点。</li>
                     <li><strong>双击节点:</strong> 进入创建关系模式，该节点作为源节点。</li>
-
-
-
                     <li><strong>在创建关系模式下拖拽:</strong> 从源节点拖拽到目标节点以创建关系。</li>
-
-
-
                     <li><strong>选择节点/关系:</strong> 单击节点或关系。选中项的属性将在右侧面板显示。</li>
-
                     <li><strong>编辑节点/关系:</strong> 可以通过属性面板编辑节点和关系的名称、类型和颜色。</li>
-
                     <li><strong>移动节点:</strong> 拖拽节点。</li>
-
-
-
                     <li><strong>删除节点/关系:</strong> 选中节点或关系后，按键盘的 `Delete` 键。</li>
-
-
-
                     <li><strong>取消创建关系模式:</strong> 按键盘的 `ESC` 键。</li>
-
-                   
-
                 </ul>
 
 
