调整页面元素宽高

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,14 @@
 
 
             <canvas id="graphCanvas" width="1600" height="1200"></canvas>
+            
+            <!-- 缩放控件 -->
+            <div class="zoom-controls">
+                <button id="zoomOutBtn" class="zoom-btn" title="缩小">−</button>
+                <span id="zoomLevel" class="zoom-level">100%</span>
+                <button id="zoomInBtn" class="zoom-btn" title="放大">+</button>
+                <button id="zoomResetBtn" class="zoom-btn zoom-reset" title="重置缩放">⌂</button>
+            </div>
 
 
 
@@ -94,7 +102,7 @@
 
 
 
-        <div class="properties-panel">
+        <div class="properties-panel collapsed">
 
 
 
