--- a/public/my.html
+++ b/public/my.html
@@ -82,7 +82,7 @@
       box-shadow: 0 10px 22px rgba(0,0,0,0.10);
     }
     .thumb {
-      height: 140px;
+      height: 180px;
       background: linear-gradient(135deg, rgba(102,126,234,0.10), rgba(118,75,162,0.06));
       display: grid;
       place-items: center;
@@ -201,6 +201,20 @@
       background: #eee;
       margin: 6px 0;
     }
+
+    /* SweetAlert2 自定义样式 */
+    .swal2-title-sm {
+      font-size: 16px !important;
+      font-weight: 700 !important;
+    }
+    .swal2-content-sm {
+      font-size: 14px !important;
+    }
+    .swal2-btn-sm {
+      font-size: 13px !important;
+      padding: 8px 16px !important;
+    }
+
   </style>
 </head>
 <body>
@@ -230,6 +244,12 @@
 
   <!-- 隐藏的画布用于导出 -->
   <canvas id="exportCanvas" style="display:none;"></canvas>
+
+  <!-- 全局下拉菜单容器 -->
+  <div id="dropdownMenuContainer"></div>
+
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script>
     async function fetchJson(url, opts) {
@@ -285,7 +305,7 @@
         });
         const first = (g.name || 'G').trim().slice(0,1).toUpperCase();
         const thumbHtml = (g.thumbnail && g.thumbnail.startsWith('data:image'))
-          ? `<img src="${g.thumbnail}" style="width:100%;height:140px;object-fit:cover;display:block;" alt="">`
+          ? `<img src="${g.thumbnail}" style="width:100%;height:180px;object-fit:contain;display:block;background:#fff;" alt="">`
           : `<div class="thumb">${first}</div>`;
         card.innerHTML = `
           ${thumbHtml}
@@ -297,45 +317,6 @@
               <circle cx="12" cy="18" r="2"/>
             </svg>
           </button>
-          <!-- 下拉菜单 -->
-          <div class="dropdown-menu" id="menu-${g.id}">
-            <div class="dropdown-item" onclick="event.stopPropagation(); handleMenuAction('rename', ${g.id})">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M12 20h9M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/>
-              </svg>
-              重命名
-            </div>
-            <div class="dropdown-item" onclick="event.stopPropagation(); handleMenuAction('copy', ${g.id})">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"/>
-                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/>
-              </svg>
-              复制
-            </div>
-            <div class="dropdown-item dropdown-with-select" onclick="event.stopPropagation();">
-              <div class="dropdown-select-wrapper">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
-                  <polyline points="7 10 12 15 17 10"/>
-                  <line x1="12" y1="15" x2="12" y2="3"/>
-                </svg>
-                <span>导出图片</span>
-              </div>
-              <select class="export-format-select" id="format-${g.id}" onchange="event.stopPropagation();">
-                <option value="jpg">JPG</option>
-                <option value="png">PNG</option>
-              </select>
-              <button class="export-btn" onclick="event.stopPropagation(); handleExport(${g.id})">导出</button>
-            </div>
-            <div class="dropdown-divider"></div>
-            <div class="dropdown-item danger" onclick="event.stopPropagation(); handleMenuAction('delete', ${g.id})">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <polyline points="3 6 5 6 21 6"/>
-                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
-              </svg>
-              删除
-            </div>
-          </div>
           <div class="card-body">
             <div class="name">${g.name || '未命名关系图'}</div>
             <div class="meta">创建时间：${fmtTime(g.createdAt)}</div>
@@ -356,21 +337,64 @@
     let activeMenuButton = null;
 
     function closeMenu() {
-      document.querySelectorAll('.dropdown-menu').forEach(m => m.classList.remove('show'));
+      const container = document.getElementById('dropdownMenuContainer');
+      container.innerHTML = '';
       activeMenuId = null;
       activeMenuButton = null;
     }
 
     function showMenu(graphId, button) {
       closeMenu();
-      const menu = document.getElementById('menu-' + graphId);
       const btn = button || document.querySelector('.card-more[data-graph-id="' + graphId + '"]');
-      if (menu && btn) {
+      if (btn) {
+        // 创建菜单
+        const container = document.getElementById('dropdownMenuContainer');
+        container.innerHTML = `
+          <div class="dropdown-menu show" id="menu-${graphId}">
+            <div class="dropdown-item" onclick="event.stopPropagation(); handleMenuAction('rename', ${graphId})">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 20h9M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/>
+              </svg>
+              重命名
+            </div>
+            <div class="dropdown-item" onclick="event.stopPropagation(); handleMenuAction('copy', ${graphId})">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"/>
+                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/>
+              </svg>
+              复制
+            </div>
+            <div class="dropdown-item dropdown-with-select" onclick="event.stopPropagation();">
+              <div class="dropdown-select-wrapper">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                  <polyline points="7 10 12 15 17 10"/>
+                  <line x1="12" y1="15" x2="12" y2="3"/>
+                </svg>
+                <span>导出图片</span>
+              </div>
+              <select class="export-format-select" id="format-${graphId}" onchange="event.stopPropagation();">
+                <option value="jpg">JPG</option>
+                <option value="png">PNG</option>
+              </select>
+              <button class="export-btn" onclick="event.stopPropagation(); handleExport(${graphId})">导出</button>
+            </div>
+            <div class="dropdown-divider"></div>
+            <div class="dropdown-item danger" onclick="event.stopPropagation(); handleMenuAction('delete', ${graphId})">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="3 6 5 6 21 6"/>
+                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
+              </svg>
+              删除
+            </div>
+          </div>
+        `;
+
         // 计算菜单位置
+        const menu = document.getElementById('menu-' + graphId);
         const rect = btn.getBoundingClientRect();
         menu.style.left = rect.right - 150 + 'px';
         menu.style.top = rect.bottom + 5 + 'px';
-        menu.classList.add('show');
         activeMenuId = graphId;
         activeMenuButton = btn;
       }
@@ -397,34 +421,185 @@
       }
     });
 
+    // ESC键关闭菜单
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape' && activeMenuId) {
+        closeMenu();
+      }
+    });
+
+
+
     // 全局菜单操作处理函数
     window.handleMenuAction = function(action, graphId) {
-      closeMenu();
+      console.log('handleMenuAction called:', action, graphId);
+      // 删除操作先不关闭菜单，等确认后再关闭
+      if (action !== 'delete') {
+        closeMenu();
+      }
 
       if (action === 'delete') {
-        if (confirm('确定要删除这个关系图吗？此操作不可恢复。')) {
-          fetchJson('/api/graphs/' + graphId, { method: 'DELETE' })
-            .then(() => loadGraphs())
-            .catch(err => alert('删除失败: ' + err.message));
-        }
+        console.log('Showing delete confirmation modal');
+        Swal.fire({
+          title: '确认删除',
+          text: '确定要删除这个关系图吗？此操作不可恢复。',
+          icon: 'warning',
+          showCancelButton: true,
+          confirmButtonColor: '#667eea',
+          cancelButtonColor: '#666',
+          confirmButtonText: '确定删除',
+          cancelButtonText: '取消',
+          width: '300px',
+          customClass: {
+            title: 'swal2-title-sm',
+            content: 'swal2-content-sm',
+            confirmButton: 'swal2-btn-sm',
+            cancelButton: 'swal2-btn-sm'
+          }
+        }).then((result) => {
+          if (result.isConfirmed) {
+            console.log('Delete confirmed, graphId:', graphId);
+            closeMenu();
+            fetchJson('/api/graphs/' + graphId, { method: 'DELETE' })
+              .then(() => {
+                loadGraphs();
+                Swal.fire({
+                  title: '删除成功',
+                  text: '关系图已成功删除',
+                  icon: 'success',
+                  confirmButtonColor: '#667eea',
+                  width: '280px',
+                  customClass: {
+                    title: 'swal2-title-sm',
+                    content: 'swal2-content-sm',
+                    confirmButton: 'swal2-btn-sm'
+                  }
+                });
+              })
+              .catch(err => {
+                Swal.fire({
+                  title: '删除失败',
+                  text: err.message,
+                  icon: 'error',
+                  confirmButtonColor: '#667eea',
+                  width: '280px',
+                  customClass: {
+                    title: 'swal2-title-sm',
+                    content: 'swal2-content-sm',
+                    confirmButton: 'swal2-btn-sm'
+                  }
+                });
+              });
+          } else {
+            console.log('Delete cancelled');
+            closeMenu();
+          }
+        });
       } else if (action === 'rename') {
-        const newName = prompt('请输入新的关系图名称：');
-        if (newName && newName.trim()) {
-          fetchJson('/api/graphs/' + graphId, {
-            method: 'PUT',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ name: newName.trim() })
-          }).then(() => loadGraphs());
-        }
+        Swal.fire({
+          title: '重命名',
+          input: 'text',
+          inputPlaceholder: '请输入新的关系图名称',
+          showCancelButton: true,
+          confirmButtonColor: '#667eea',
+          cancelButtonColor: '#666',
+          confirmButtonText: '确定',
+          cancelButtonText: '取消',
+          width: '300px',
+          customClass: {
+            title: 'swal2-title-sm',
+            confirmButton: 'swal2-btn-sm',
+            cancelButton: 'swal2-btn-sm'
+          }
+        }).then((result) => {
+          if (result.isConfirmed && result.value && result.value.trim()) {
+            fetchJson('/api/graphs/' + graphId, {
+              method: 'PUT',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ name: result.value.trim() })
+            }).then(() => {
+              loadGraphs();
+              Swal.fire({
+                title: '重命名成功',
+                text: '关系图名称已更新',
+                icon: 'success',
+                confirmButtonColor: '#667eea',
+                width: '280px',
+                customClass: {
+                  title: 'swal2-title-sm',
+                  content: 'swal2-content-sm',
+                  confirmButton: 'swal2-btn-sm'
+                }
+              });
+            }).catch(err => {
+              Swal.fire({
+                title: '重命名失败',
+                text: err.message,
+                icon: 'error',
+                confirmButtonColor: '#667eea',
+                width: '280px',
+                customClass: {
+                  title: 'swal2-title-sm',
+                  content: 'swal2-content-sm',
+                  confirmButton: 'swal2-btn-sm'
+                }
+              });
+            });
+          }
+        });
       } else if (action === 'copy') {
-        const name = prompt('请输入复制后的名称：', '副本 - ');
-        if (name && name.trim()) {
-          fetchJson('/api/graphs', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ name: name.trim() })
-          }).then(() => loadGraphs());
-        }
+        Swal.fire({
+          title: '复制关系图',
+          input: 'text',
+          inputValue: '副本 - ',
+          inputPlaceholder: '请输入复制后的名称',
+          showCancelButton: true,
+          confirmButtonColor: '#667eea',
+          cancelButtonColor: '#666',
+          confirmButtonText: '确定',
+          cancelButtonText: '取消',
+          width: '300px',
+          customClass: {
+            title: 'swal2-title-sm',
+            confirmButton: 'swal2-btn-sm',
+            cancelButton: 'swal2-btn-sm'
+          }
+        }).then((result) => {
+          if (result.isConfirmed && result.value && result.value.trim()) {
+            fetchJson('/api/graphs', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ name: result.value.trim() })
+            }).then(() => {
+              loadGraphs();
+              Swal.fire({
+                title: '复制成功',
+                text: '关系图已复制',
+                icon: 'success',
+                confirmButtonColor: '#667eea',
+                width: '280px',
+                customClass: {
+                  title: 'swal2-title-sm',
+                  content: 'swal2-content-sm',
+                  confirmButton: 'swal2-btn-sm'
+                }
+              });
+            }).catch(err => {
+              Swal.fire({
+                title: '复制失败',
+                text: err.message,
+                icon: 'error',
+                confirmButtonColor: '#667eea',
+                width: '280px',
+                customClass: {
+                  title: 'swal2-title-sm',
+                  content: 'swal2-content-sm',
+                  confirmButton: 'swal2-btn-sm'
+                }
+              });
+            });
+          }
+        });
       }
     };
 
@@ -433,7 +608,6 @@
       console.log('开始导出，graphId:', graphId);
       const format = document.getElementById('format-' + graphId)?.value || 'png';
       console.log('导出格式:', format);
-      closeMenu();
 
       try {
         // 获取关系图数据
@@ -461,9 +635,11 @@
         canvas.width = width;
         canvas.height = height;
 
-        // 填充背景
-        ctx.fillStyle = '#ffffff';
-        ctx.fillRect(0, 0, width, height);
+        // 填充背景 - PNG使用透明背景，JPG使用白色背景
+        if (format === 'jpg') {
+          ctx.fillStyle = '#ffffff';
+          ctx.fillRect(0, 0, width, height);
+        }
 
         // 缩放和平移
         ctx.translate(-minX, -minY);
@@ -475,7 +651,7 @@
           if (source && target) {
             ctx.beginPath();
             ctx.moveTo(source.x, source.y);
-            const bendPoints = edge.bendPoints ? JSON.parse(edge.bendPoints) : [];
+            const bendPoints = Array.isArray(edge.bendPoints) ? edge.bendPoints : [];
             bendPoints.forEach(p => ctx.lineTo(p.x, p.y));
             ctx.lineTo(target.x, target.y);
             ctx.strokeStyle = edge.color || '#999';
@@ -521,20 +697,64 @@
         link.click();
 
         console.log('图片导出成功');
+        closeMenu();
       } catch (err) {
         console.error('导出失败:', err);
-        alert('导出失败: ' + err.message);
+        Swal.fire({
+          title: '导出失败',
+          text: err.message,
+          icon: 'error',
+          confirmButtonColor: '#667eea',
+          width: '280px',
+          customClass: {
+            title: 'swal2-title-sm',
+            content: 'swal2-content-sm',
+            confirmButton: 'swal2-btn-sm'
+          }
+        });
+        closeMenu();
       }
     };
 
     document.getElementById('btnCreate').addEventListener('click', async () => {
       const name = document.getElementById('graphName').value.trim() || '未命名关系图';
-      const g = await fetchJson('/api/graphs', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ name })
-      });
-      window.location.href = '/g/' + g.id;
+      try {
+        const g = await fetchJson('/api/graphs', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ name })
+        });
+        // 清空输入框
+        document.getElementById('graphName').value = '';
+        // 刷新关系图列表
+        loadGraphs();
+        // 显示成功提示
+        Swal.fire({
+          title: '创建成功',
+          text: '关系图已创建',
+          icon: 'success',
+          confirmButtonColor: '#667eea',
+          width: '280px',
+          customClass: {
+            title: 'swal2-title-sm',
+            content: 'swal2-content-sm',
+            confirmButton: 'swal2-btn-sm'
+          }
+        });
+      } catch (err) {
+        Swal.fire({
+          title: '创建失败',
+          text: err.message,
+          icon: 'error',
+          confirmButtonColor: '#667eea',
+          width: '280px',
+          customClass: {
+            title: 'swal2-title-sm',
+            content: 'swal2-content-sm',
+            confirmButton: 'swal2-btn-sm'
+          }
+        });
+      }
     });
 
     document.getElementById('btnLogout').addEventListener('click', async () => {
