弹窗提示及转折点删除功能添加

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
 
     <link rel="shortcut icon" href="/favicon.ico">
 
-
+  <!-- SweetAlert2 -->
+  <script src="/sweetalert2@11.js"></script>
 
 </head>
 
@@ -67,7 +68,7 @@
 
 
             <button id="helpBtn" style="margin-left: auto;">帮助</button>
-            <button id="myGraphsBtn" style="margin-left: 10px;">我的关系图</button>
+            <button id="myGraphsBtn" style="margin-left: 10px;">我的</button>
 
 
 
