--- a/public/login.html
+++ b/public/login.html
@@ -53,6 +53,9 @@
       .auth-page { grid-template-columns: 1fr; height: auto; }
     }
   </style>
+
+    <!-- SweetAlert2 -->
+  <script src="sweetalert2@11.js"></script>
 </head>
 <body>
   <div class="auth-page">
