修复编辑时的bug

--- a/public/index.html
+++ b/public/index.html
@@ -148,8 +148,10 @@
 
                 <label for="nodeType">节点类型:</label>
                 <select id="nodeType">
-                    <option value="person">人物</option>
                     <option value="organization">组织</option>
+                    <option value="person">人物</option>
+                    <option value="location">地点</option>
+                    <option value="time">时间</option>
                     <option value="event">事件</option>
                     <option value="concept">概念</option>
                 </select>
