--- a/public/my.html
+++ b/public/my.html
@@ -367,7 +367,7 @@
     <!-- 左侧边栏 -->
     <div class="sidebar">
       <div class="logo">关系图编辑器</div>
-      <button id="btnCreate" class="create-btn">新建关系图</button>
+      <button id="btnCreate" class="create-btn">+&nbsp;&nbsp;&nbsp;新建关系图</button>
     </div>
 
     <!-- 右侧内容区 -->
