--- a/public/my.html
+++ b/public/my.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>我的关系图 - 关系图编辑器</title>
+  <title>脉图：让关系，一目了然</title>
   <link rel="stylesheet" href="/styles.css" />
   <style>
     body {
