--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,7 @@
 
         </div>
 
-
-
-        
-
-
+        <div id="graphDescription" class="graph-description" style="display: none;"></div>
 
         <div class="canvas-container">
 
