登录页及部分样式调整

--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>脉图 - 让关系，一目了然</title>
+  <title>脉图 - 让结构可见，让关系一目了然</title>
   <link rel="stylesheet" href="/styles.css" />
   <style>
     * {
@@ -32,7 +32,7 @@
       max-height: 90vh;
     }
     .left-panel {
-      flex: 1.1;
+      flex: 1.3;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: #fff;
       padding: 40px 32px;
@@ -414,24 +414,24 @@
         </div>
         <div class="logo-text">MindMaple | 脉图</div>
       </div>
-      <h1 class="slogan">让关系，一目了然</h1>
-      <p class="description">世上无难事，只要肯梳理。脉图，用“图”的方式把复杂关系理清楚。</p>
+      <h1 class="slogan">让结构可见，让关系一目了然</h1>
+      <p class="description">脉图，用"对象-属性-关系"的方式，把零散的信息连成一张网。把脑子里的想法变成看得见的图，让电脑（AI）也能理解你的业务，为数据分析提供基础，实现用数据指导决策。</p>
       <div class="features">
         <div class="feature-item">
           <div class="feature-icon">🏢</div>
-          <div class="feature-text">组织结构：如集团、公司、部门、岗位、角色，梳理清楚各自的目标、职责、权力，提高组织运转效率</div>
+          <div class="feature-text">组织结构：把组织架构画出来，谁负责什么、谁向谁汇报，一目了然，让管理更高效</div>
         </div>
         <div class="feature-item">
           <div class="feature-icon">👤</div>
-          <div class="feature-text">人物关系：如亲友、合作、竞争、依赖等，梳理清楚人物之间的关系，祝您理清事情背后的原因</div>
+          <div class="feature-text">人物关系：把人物关系理清楚，谁认识谁、谁影响谁，看得明明白白，帮你发现规律</div>
         </div>
         <div class="feature-item">
           <div class="feature-icon">📈</div>
-          <div class="feature-text">事件发展：如项目、任务、事件等，做好预测、预判，提前规避风险</div>
+          <div class="feature-text">事件发展：把事情的前因后果连起来，预测下一步会发生什么，提前规避风险</div>
         </div>
         <div class="feature-item">
-          <div class="feature-icon">🌐</div>
-          <div class="feature-text">其他：时间轴、族谱、树图等等，更多场景待您发现
+          <div class="feature-icon">🧠</div>
+          <div class="feature-text">知识建模：自定义你需要的对象和关系，灵活适配任何业务场景，让数据真正为你服务
           </div>
         </div>
       </div>
