增加后退、前进、美化功能

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
 
         <div class="toolbar">
 
+            <button id="undoBtn" title="后退 (Ctrl+Z)">↶</button>
+            <button id="redoBtn" title="前进 (Ctrl+Y)">↷</button>
             <button id="addNodeBtn">+ 新增节点</button>
 
             <button id="clearBtn" style="display: none;" >🔄 清空画布</button>
@@ -63,7 +65,8 @@
 
 
 
-            <button id="settingsBtn" style="margin-left: auto;">设置</button>
+            <button id="beautifyBtn" style="margin-left: 10px;">美化</button>
+            <button id="settingsBtn" style="margin-left: 10px;">设置</button>
             <button id="helpBtn" style="margin-left: 10px;">帮助</button>
             <button id="myGraphsBtn" style="margin-left: 10px;">我的</button>
         </div>
