--- a/public/index.html
+++ b/public/index.html
@@ -44,31 +44,51 @@
 
 
         <div class="toolbar">
-
-            <button id="undoBtn" title="后退 (Ctrl+Z)">↶</button>
-            <button id="redoBtn" title="前进 (Ctrl+Y)">↷</button>
-            <button id="addNodeBtn">+ 新增节点</button>
-
-            <button id="clearBtn" style="display: none;" >🔄 清空画布</button>
-
-
-
-            <div class="status-bar" style="display: none;">
-
-
-
-                <span id="statusText">就绪 (按 Delete 键删除选中项)</span>
-
-
-
+            <div class="toolbar-left">
+                <button id="undoBtn" title="后退 (Ctrl+Z)">↶</button>
+                <button id="redoBtn" title="前进 (Ctrl+Y)">↷</button>
+                <button id="addNodeBtn">+ 新增节点</button>
+                <button id="clearBtn" style="display: none;">🔄 清空画布</button>
             </div>
-
-
-
-            <button id="beautifyBtn" style="margin-left: 10px;">美化</button>
-            <button id="settingsBtn" style="margin-left: 10px;">设置</button>
-            <button id="helpBtn" style="margin-left: 10px;">帮助</button>
-            <button id="myGraphsBtn" style="margin-left: 10px;">我的</button>
+            
+            <div class="status-bar" style="display: none;">
+                <span id="statusText">就绪 (按 Delete 键删除选中项)</span>
+            </div>
+            
+            <div class="toolbar-right">
+                <button id="beautifyBtn" title="美化布局">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 2L2 7l10 5 10-5M12 22l10-5-10 5"/>
+                        <circle cx="12" cy="12" r="3"/>
+                    </svg>
+                    <span>美化</span>
+                </button>
+                <button id="settingsBtn" title="设置">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="12" cy="12" r="3"/>
+                        <path d="M12 1v6m0 6v6m-6-6h6m-6 6h6"/>
+                        <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-1.42 1.42l-.06.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1.82.33l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 1.42-1.42l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0 1.82-.33l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-1.42 1.42l-.06-.06a1.65 1.65 0 0 0-.33 1.82 1.65 1.65 0 0 0-1.82-.33l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 1.42-1.42l.06-.06a1.65 1.65 0 0 0 .33-1.82z"/>
+                    </svg>
+                    <span>设置</span>
+                </button>
+                <button id="helpBtn" title="帮助">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="12" cy="12" r="10"/>
+                        <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2 3 3 3 5.5s-1 5.5-3 5.5a3 3 0 0 1-5.83-1"/>
+                        <path d="M12 17h.01"/>
+                    </svg>
+                    <span>帮助</span>
+                </button>
+                <button id="myGraphsBtn" title="我的关系图">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="3" width="7" height="7"/>
+                        <rect x="14" y="3" width="7" height="7"/>
+                        <rect x="14" y="14" width="7" height="7"/>
+                        <rect x="3" y="14" width="7" height="7"/>
+                    </svg>
+                    <span>我的</span>
+                </button>
+            </div>
         </div>
 
         <div class="canvas-container">
